@@ -2929,6 +2929,7 @@ MONODLL_OBJECTS =  &
 	$(OBJS)\monodll_filtall.obj &
 	$(OBJS)\monodll_filtfind.obj &
 	$(OBJS)\monodll_fmapbase.obj &
+	$(OBJS)\monodll_fs_filter.obj &
 	$(OBJS)\monodll_fs_zip.obj &
 	$(OBJS)\monodll_hash.obj &
 	$(OBJS)\monodll_hashmap.obj &
@@ -3045,6 +3046,7 @@ MONOLIB_OBJECTS =  &
 	$(OBJS)\monolib_filtall.obj &
 	$(OBJS)\monolib_filtfind.obj &
 	$(OBJS)\monolib_fmapbase.obj &
+	$(OBJS)\monolib_fs_filter.obj &
 	$(OBJS)\monolib_fs_zip.obj &
 	$(OBJS)\monolib_hash.obj &
 	$(OBJS)\monolib_hashmap.obj &
@@ -3163,6 +3165,7 @@ BASEDLL_OBJECTS =  &
 	$(OBJS)\basedll_filtall.obj &
 	$(OBJS)\basedll_filtfind.obj &
 	$(OBJS)\basedll_fmapbase.obj &
+	$(OBJS)\basedll_fs_filter.obj &
 	$(OBJS)\basedll_fs_zip.obj &
 	$(OBJS)\basedll_hash.obj &
 	$(OBJS)\basedll_hashmap.obj &
@@ -3265,6 +3268,7 @@ BASELIB_OBJECTS =  &
 	$(OBJS)\baselib_filtall.obj &
 	$(OBJS)\baselib_filtfind.obj &
 	$(OBJS)\baselib_fmapbase.obj &
+	$(OBJS)\baselib_fs_filter.obj &
 	$(OBJS)\baselib_fs_zip.obj &
 	$(OBJS)\baselib_hash.obj &
 	$(OBJS)\baselib_hashmap.obj &
@@ -4892,6 +4896,9 @@ $(OBJS)\monodll_filtfind.obj :  .AUTODEPEND ..\..\src\common\filtfind.cpp
 	$(CXX) -bt=nt -zq -fo=$^@ $(MONODLL_CXXFLAGS) $<
 
 $(OBJS)\monodll_fmapbase.obj :  .AUTODEPEND ..\..\src\common\fmapbase.cpp
+	$(CXX) -bt=nt -zq -fo=$^@ $(MONODLL_CXXFLAGS) $<
+
+$(OBJS)\monodll_fs_filter.obj :  .AUTODEPEND ..\..\src\common\fs_filter.cpp
 	$(CXX) -bt=nt -zq -fo=$^@ $(MONODLL_CXXFLAGS) $<
 
 $(OBJS)\monodll_fs_zip.obj :  .AUTODEPEND ..\..\src\common\fs_zip.cpp
@@ -6953,6 +6960,9 @@ $(OBJS)\monolib_filtfind.obj :  .AUTODEPEND ..\..\src\common\filtfind.cpp
 	$(CXX) -bt=nt -zq -fo=$^@ $(MONOLIB_CXXFLAGS) $<
 
 $(OBJS)\monolib_fmapbase.obj :  .AUTODEPEND ..\..\src\common\fmapbase.cpp
+	$(CXX) -bt=nt -zq -fo=$^@ $(MONOLIB_CXXFLAGS) $<
+
+$(OBJS)\monolib_fs_filter.obj :  .AUTODEPEND ..\..\src\common\fs_filter.cpp
 	$(CXX) -bt=nt -zq -fo=$^@ $(MONOLIB_CXXFLAGS) $<
 
 $(OBJS)\monolib_fs_zip.obj :  .AUTODEPEND ..\..\src\common\fs_zip.cpp
@@ -9019,6 +9029,9 @@ $(OBJS)\basedll_filtfind.obj :  .AUTODEPEND ..\..\src\common\filtfind.cpp
 $(OBJS)\basedll_fmapbase.obj :  .AUTODEPEND ..\..\src\common\fmapbase.cpp
 	$(CXX) -bt=nt -zq -fo=$^@ $(BASEDLL_CXXFLAGS) $<
 
+$(OBJS)\basedll_fs_filter.obj :  .AUTODEPEND ..\..\src\common\fs_filter.cpp
+	$(CXX) -bt=nt -zq -fo=$^@ $(BASEDLL_CXXFLAGS) $<
+
 $(OBJS)\basedll_fs_zip.obj :  .AUTODEPEND ..\..\src\common\fs_zip.cpp
 	$(CXX) -bt=nt -zq -fo=$^@ $(BASEDLL_CXXFLAGS) $<
 
@@ -9272,6 +9285,9 @@ $(OBJS)\baselib_filtfind.obj :  .AUTODEPEND ..\..\src\common\filtfind.cpp
 	$(CXX) -bt=nt -zq -fo=$^@ $(BASELIB_CXXFLAGS) $<
 
 $(OBJS)\baselib_fmapbase.obj :  .AUTODEPEND ..\..\src\common\fmapbase.cpp
+	$(CXX) -bt=nt -zq -fo=$^@ $(BASELIB_CXXFLAGS) $<
+
+$(OBJS)\baselib_fs_filter.obj :  .AUTODEPEND ..\..\src\common\fs_filter.cpp
 	$(CXX) -bt=nt -zq -fo=$^@ $(BASELIB_CXXFLAGS) $<
 
 $(OBJS)\baselib_fs_zip.obj :  .AUTODEPEND ..\..\src\common\fs_zip.cpp
